<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eatenFoodFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_menu_home" />

    <item
        android:id="@+id/shareFoodFragment"
        android:icon="@drawable/ic_recommend"
        android:title="@string/bottom_menu_share" />

    <item
        android:id="@+id/foodMapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/bottom_menu_map" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_menu_profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_menu_setting" />

</menu>