<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="diaryItem"
            type="org.ybk.fooddiaryapp.data.model.diary.Diary" />

        <variable
            name="dialog"
            type="org.ybk.fooddiaryapp.presentation.dialog.DotDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/detail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="@{() -> dialog.onClickDetailButton()}"
            android:text="@string/detail"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="@{() -> dialog.onClickEditButton()}"
            android:text="@string/edit"
            android:textColor="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_btn" />

        <Button
            android:id="@+id/remove_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#757575"
            android:background="@color/white"
            android:onClick="@{() -> dialog.onClickRemoveButton()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_btn" />

        <Button
            android:id="@+id/share_with_text_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_with_text"
            android:textColor="#757575"
            android:background="@color/white"
            android:onClick="@{() -> dialog.onClickShareWithTextButton()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remove_btn" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#757575"
            android:background="@color/white"
            android:onClick="@{() -> dialog.onClickShareButton()}"
            app:shareText="@{diaryItem}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_with_text_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>