<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="constants"
            type="org.ybk.fooddiaryapp.util.Constants" />

        <variable
            name="fragment"
            type="org.ybk.fooddiaryapp.presentation.editdiary.EditDiaryFragment" />

        <variable
            name="viewmodel"
            type="org.ybk.fooddiaryapp.presentation.editdiary.EditDiaryViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/base_padding">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/camera_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_camera_gray"
                    android:onClick="@{() -> fragment.onClickCameraButton()}"
                    android:layout_marginEnd="@dimen/p_5"/>

                <ImageButton
                    android:id="@+id/gallery_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_gallery_gray"
                    android:onClick="@{() -> fragment.onClickGalleryButton()}"
                    android:layout_marginEnd="@dimen/base_padding"/>

                <TextView
                    android:id="@+id/image_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(viewmodel.diary.imageList.size())}"
                    android:textColor="@{viewmodel.imageCount == constants.MAX_IMAGE_COUNT? @color/colorPrimary : @color/colorDefault}"/>

                <TextView
                    android:id="@+id/max_image_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/4"
                    android:textColor="@{viewmodel.imageCount == constants.MAX_IMAGE_COUNT? @color/colorPrimary : @color/colorDefault}"/>


            </LinearLayout>

            <View
                android:id="@+id/view"
                style="@style/MidLineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/delete_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_info"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginStart="@dimen/base_padding"
                app:layout_constraintBottom_toBottomOf="@+id/image_recycler_view"
                app:layout_constraintStart_toStartOf="@+id/image_recycler_view"
                app:layout_constraintTop_toTopOf="@+id/image_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:imageItems="@{viewmodel.imageList}"
                tools:listitem="@layout/food_image_list_item"
                android:layout_marginTop="@dimen/base_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
                android:id="@+id/content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@{viewmodel.diary.contents}"
                android:ems="10"
                android:hint="@string/content_hint"
                android:inputType="textMultiLine"
                android:background="@drawable/gray_border"
                android:padding="@dimen/base_padding"
                android:gravity="left|top"
                android:layout_marginTop="@dimen/base_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_recycler_view" />

            <View
                android:id="@+id/view2"
                style="@style/MidLineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_edit_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/base_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.diary.address}"
                        android:background="@drawable/gray_border"
                        android:hint="@string/add_location"
                        android:padding="@dimen/base_padding"
                        android:layout_marginEnd="@dimen/base_padding"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/add_location_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/add_location_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_map_gray"
                        android:onClick="@{() -> fragment.onClickLocationButton()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view3"
                    style="@style/MidLineHorizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content_edit_text" />

                <Button
                    android:id="@+id/write_complete_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="@{() -> fragment.onClickEditCompleteButton()}"
                    android:text="@string/edit_complete"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/base_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
